--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 /* Base Typography & Layout */
 body {
-  font-family: 'Merriweather', serif;
+  font-family: 'Roboto', sans-serif;
   line-height: 1.6;
   margin: 0;
   padding: 0;
@@ -34,7 +36,6 @@ nav a {
   margin: 0 0.75rem;
   text-decoration: none;
   font-weight: 500;
-  font-family: 'Roboto', sans-serif;
 }
 
 main {
