--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
 
 /* Base Typography & Layout */
 body {
@@ -21,7 +21,7 @@ header {
 header h1 {
   margin: 0;
   font-size: 3.4rem;
-  font-family: 'Playfair Display', serif;
+  font-family: 'Merriweather', serif;
   letter-spacing: 0.5px;
 }
 
@@ -58,7 +58,7 @@ h2 {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Merriweather', serif;
 }
 
 ul {
